...

            <View style={styles.content}>
                <Text style={styles.title}>Compartilhe algumas informações básicas sobre sua quadra</Text>
                <Text style={styles.subtitle}>Você adicionará mais informações depois, como fotos e regras.</Text>

                <View style={styles.countersContainer}>
                    <Counter label="Jogadores (Capacidade)" value={players} setValue={setPlayers} />
                    <View style={styles.divider} />
                    <Counter label="Quadras disponíveis" value={courts} setValue={setCourts} />
                    <View style={styles.divider} />
                    <Counter label="Bancos / Assentos" value={benches} setValue={setBenches} />
                    <View style={styles.divider} />
                    <Counter label="Banheiros / Vestiários" value={beverage} setValue={setBeverage} />
...
