...
            </View>

            <Text className="text-sm font-medium text-neutral-500 mb-2">
                Pergunta 2 de 5
            </Text>
            <Text className="text-2xl font-bold mb-2">
                Quais esportes você pratica?
            </Text>
            <Text className="text-neutral-500 mb-8">
                Selecione todos que se aplicam
            </Text>

            <ScrollView showsVerticalScrollIndicator={false}>
...
