...
  'football': require('../assets/images/sports/football.png'),
  'soccer': require('../assets/images/sports/football.png'),
  'futebol': require('../assets/images/sports/football.png'),
  'Futebol': require('../assets/images/sports/football.png'),
  'tennis': require('../assets/images/sports/tennis.png'),
  'Tennis': require('../assets/images/sports/tennis.png'),
  'Tênis': require('../assets/images/sports/tennis.png'),
  'volleyball': require('../assets/images/sports/volleyball.png'),
  'volei': require('../assets/images/sports/volleyball.png'),
  'Vôlei': require('../assets/images/sports/volleyball.png'),
  'basketball': require('../assets/images/sports/basketball.png'),
  'Basquete': require('../assets/images/sports/basketball.png'),
  'futevolei': require('../assets/images/sports/futevolei.png'),
...
